projects/vb6parse/snapshots/parsers/cst/library/string/right/right_while_wend.snap
---
source: projects/vb6parse/tests/library/string/right.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: WhileStatement
      children:
        - kind: WhileKeyword
          text: While
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Right
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: LineKeyword
                              text: line
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "1"
                - kind: RightParenthesis
                  text: )
            - kind: Whitespace
              text: " "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: " "
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\" \""
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: LineInputStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: LineKeyword
                  text: line
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Left
                - kind: LeftParenthesis
                  text: (
                - kind: LineKeyword
                  text: line
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: LenKeyword
                  text: Len
                - kind: LeftParenthesis
                  text: (
                - kind: LineKeyword
                  text: line
                - kind: RightParenthesis
                  text: )
                - kind: Whitespace
                  text: " "
                - kind: SubtractionOperator
                  text: "-"
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "1"
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: WendKeyword
          text: Wend
        - kind: Newline
          text: "\n"
